<resources>
    <string name="app_name">mytaxi demo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- MainActivity -->
    <string name="text_hint_driver">Search driver here</string>

    <!-- MenuItems -->
    <string name="text_item_title_logout">Logout</string>

    <!-- DriverProfileActivity -->
    <string name="title_activity_driver_profile">Driver Profile</string>

    <!-- AuthenticationActivity -->
    <string name="title_activity_authentication">Login</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="button_login">Login</string>
    <string name="message_login_fail">Login failed</string>

    <!-- AuthenticationActivityInstrumentationTest -->
    <string name="valid_name">whiteelephant261</string>
    <string name="valid_pword">video1</string>
    <!-- MainActivityInstrumentationTest -->
    <string name="search_text">sa</string>
    <string name="selected_driver_name">Sarah Friedrich</string>

</resources>
